src/test/deca/context/invalid/created/sans_objet/affectation_string.deca
// Description:
//    Programme minimaliste utilisant string.
//
// Resultats:
//  error ligne 12
//
// Historique:
//    cree le 13/01/2024

{
        string x;
        x = "hello";
}